give menu items a minimum height to avoid overlapping icons
git-svn-id: file:///home/awy/mirror/slim/trunk/server@15371 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -387,7 +387,10 @@ div.pagetitleWithIcon {
 
 
 /* Home menu */
-.homeMenuSection_expanded .homeMenuItem { padding-left: 34px; }
+.homeMenuSection_expanded .homeMenuItem {
+	padding-left: 34px;
+	min-height: 14px;
+}
 
 .homeMenuItem {
 	margin-left: 6px;
